--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <script src="app.js" charset="UTF-8"></script>
 </head>
 <body>
-    <h3>Score: <span id="result"></span></h3>
-    <div class="grid">
-        
+    <div>
+        <h3>Score: <span id="result"></span></h3>
+        <div class="grid">            
+        </div>
     </div>
 </body>
 </html>
